居然把一整下 summary 给忘了

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -715,7 +715,8 @@ England 94      56      Europe
 
 在一个 \patact 语句中, 模式决定动作什么时候执行. 有时候动作会非常简单: 一条
 单独的打印语句或赋值语句. 在有些时候, 动作有可能是多条语句, 语句之间用换
-行符或分号分开. 这一小节通过讨论表达式与流程控制语句来开始对动作的描述.
+行符或分号分开. 这一小节通过讨论表达式与流程控制语句来开始对动作的描述. 
+这节结束后, 将会讨论用户自定义函数与输入/输出语句.
 \begin{summary}{动作}
     动作中的语句可以包括:
     \begin{itemize}
@@ -858,6 +859,23 @@ England 94      56      Europe
 关系运算符, 或含有正则表达式匹配运算符的表达式. 关系运算符包括 \verb'<',
 \verb'<=', \verb'==' (相等), \verb'!=' (不相等), \verb'>=' 与 \verb'>'.
 \marginpar{37}
+\begin{summary}{表达式}
+    \begin{enumerate}
+        \item 最基本的表达式包括: \par
+            数值与字符串常量, 变量, 字段, 函数调用, 数组元素.
+        \item 可以把表达式组合起来的运算符包括: \par
+            赋值运算符 \verb'=  +=  -=  *=  /=  %=  ^='
+        \par 条件表达式 \verb'?:'
+        \par 逻辑运算符 \verb'||' (OR), \verb'&&' (AND), \verb'!' (NOT)
+        \par 匹配运算符 \verb'~' 和 \verb'!~'
+        \par 关系运算符 \verb'<  <=  ==  !=  >  >=' 
+        \par 拼接运算符 (没有显式的拼接运算符)
+        \par 算术运算符 \verb'+ - * / % ^'
+        \par 单目运算符 \verb'+' 和 \verb'-'
+        \par 自增与自减运算符 \verb'++' 和 \verb'--' (包括前缀与后缀)
+        \par 括号 (用于分组)
+    \end{enumerate}
+\end{summary}
 正则表达式的运算符包括 \verb'~' (被匹配) 与 \verb'!~' (不被匹配).
 如果比较表达式的判断结果为真, 则它的值是 1, 否则为 0. 所以, 表达式
 \begin{awkcode}
