删除 \summary 的 FIXME, 并为它添加 TODO

--- a/preamble.tex
+++ b/preamble.tex
@@ -92,8 +92,7 @@
 {\end{quotation}}
 
 % environment for summary
-% FIXME: 当边框分页时, 会在分页后的边框的左边打印 "break" 字样,
-% 这不是我想要的效果, 请精通 LaTeX 的人帮忙修复这个问题.
+% TODO: 使用 mdframed 定义 summary
 \newenvironment{summary}[1]
 {
     \begin{center}
