使于 mdframed 宏包重新定义 summary 环境.
由于 summary 环境是用 mdframed 宏包定义的, 根据错误信息提示, 在 mdframed
环境内不能出现 marginpar 命令, 所以需要将原来在 summary 环境内的
marginpar 移到环境外.

--- a/preamble.tex
+++ b/preamble.tex
@@ -23,6 +23,8 @@
 \usepackage{pifont}
 % 一页结束时, 脚注编号清零
 \usepackage[perpage]{footmisc}
+% summary 的边框
+\usepackage{mdframed}
 
 % 脚注编号带圈
 \renewcommand\thefootnote{\ding{\numexpr171+\value{footnote}}}
@@ -93,19 +95,14 @@
 
 % environment for summary
 % TODO: 使用 mdframed 定义 summary
+\newmdenv{summaryframe}
 \newenvironment{summary}[1]
 {
-    \begin{center}
-        \rule{\textwidth}{2.0pt}
-    \end{center}
-    \vspace{-2.0em}
+    \begin{summaryframe}
     \begin{center} \Large{#1} \end{center}%
 }
 {
-    \vspace{-1.2em}
-    \begin{center}
-        \rule{\textwidth}{2.0pt}
-    \end{center}
+    \end{summaryframe}
 }
 
 % term in English
