get syntax right to 123/210 page

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -731,7 +731,7 @@ index that shows each word in the context of the line it is found in.}
 \end{file}
 这三个句子的 KWIC 索引是\footnote{这个索引是在我的系统上运行
     \texttt{kwic} 得到的, 某几行的出现顺序与英文原版不太一致,
-我也不知道是什么原因 (我甚至没搞懂 KWIC 究竟是什么} --- 译者注}:
+我也不知道是什么原因 (我甚至没搞懂 KWIC 究竟是什么) --- 译者注}:
 \begin{file}
                         Nature  abhors a vacuum.
                                 All's well that ends well.
