get syntax right up to 125/210 page

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -889,8 +889,8 @@ KWIC 索引程序: 分而治之. 任务被细分成一系列小任务, 每个小
 顺序对这些程序进行分析.
 
 第一个排序命令把 \mbox{索引字}-页码\ 对当作输入数据, 把相同的术语放在一起,
-并按照页码排序\footnote{原文中的 \texttt{sort} 命令是:\footnote{
-    在Linux中你可以写成 \texttt{sort -t \$'\t' +0 -1 +1n -2 -u}}
+并按照页码排序:\footnote{ 在Linux中你可以写成
+    \texttt{sort -t \$'\t' +0 -1 +1n -2 -u}}
 \marginpar{126}
 \begin{awkcode}
     # ix.sort1 - sort by index term, then by page number
