--- a/processing_words.tex
+++ b/processing_words.tex
@@ -863,7 +863,7 @@ KWIC 索引程序: 分而治之. 任务被细分成一系列小任务, 每个小
     string comparison 44
     comparison, string 44
 \end{file}
-索引字通常按照术语中出现的每一个空格进行分割并旋转, 波浪号 \texttt{~}
+索引字通常按照术语中出现的每一个空格进行分割并旋转, 波浪号 \texttt{\~}
 用于阻止分割:
 \begin{file}
     coercion~to number      45
@@ -884,24 +884,23 @@ KWIC 索引程序: 分而治之. 任务被细分成一系列小任务, 每个小
 
 制作索引的过程由六个命令共同完成:
 \begin{tabbing}
-\texttt{ix.sort1} \hspace{10em} \= 先按索引字, 再按页码对输入进行排序 \\
-\texttt{ix.collapse}    \> 折叠同一个术语的页码 \\
-\texttt{ix.rotate}  \> 生成索引字的旋转 \\
-\texttt{ix.genkey}  \> 为了强制按照正确的顺序进行排序, 生成一个排序键 \\
-\texttt{ix.sort2}   \> 按照排序键进行排序 \\
-\texttt{ix.format}  \> 生成最终的输出
+\indent\texttt{ix.sort1} \hspace{5em} \= 先按索引字, 再按页码对输入进行排序 \\
+\indent\texttt{ix.collapse}    \> 折叠同一个术语的页码 \\
+\indent\texttt{ix.rotate}  \> 生成索引字的旋转 \\
+\indent\texttt{ix.genkey}  \> 为了强制按照正确的顺序进行排序, 生成一个排序键 \\
+\indent\texttt{ix.sort2}   \> 按照排序键进行排序 \\
+\indent\texttt{ix.format}  \> 生成最终的输出
 \end{tabbing}
 这些命令逐渐地往最终的索引中添加 \mbox{索引字}-页码\ 对. 接下来, 我们按照
 顺序对这些程序进行分析.
 
 第一个排序命令把 \mbox{索引字}-页码\ 对当作输入数据, 把相同的术语放在一起,
 并按照页码排序:\footnote{ 在Linux中你可以写成
-    \texttt{sort -t \$'\t' +0 -1 +1n -2 -u}}
+    \texttt{sort -t \$'{\textbackslash}t' +0 -1 +1n -2 -u}}
 \marginpar{126}
 \begin{awkcode}
     # ix.sort1 - sort by index term, then by page number
     #     input/output: lines of the form string tab number
     #     sort by string, then by number; discard duplicates
 \end{awkcode}
-\texttt{sort -t '}\textit{tab}\texttt{' +0 -1 +1n -2 -u} \par 
-
+\indent\indent\texttt{sort -t '}\textit{tab}\texttt{' +0 -1 +1n -2 -u} \par 
