review stop at 127/210 page

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -993,7 +993,7 @@ comparison}'' 生成 ``\texttt{comparison, string}''. 旋转操作与 KWIC
 \end{file}
 
 下一个步骤是对旋转后的索引字排序. 但是如果直接对它们进行排序的话, 由于它们
-仍然嵌入有格式化命令 (比如 \texttt{[...]}, 所以这些命令会对排序结果造成
+仍然嵌入有格式化命令 (比如 \texttt{[...]}), 这些命令会对排序结果造成
 干扰. 我们的解决办法是为每一行加上一个前缀 (排序键), 这个前缀确保排序结果
 是正确的, 在后面的步骤中会把这些前缀移除. 程序 \texttt{ix.genkey} 通过移除 
 \texttt{troff} 的字号与字体设置命令来构造前缀, \texttt{troff} 的字号与 
