review stop at 128/210 page

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -1034,8 +1034,8 @@ comparison}'' 生成 ``\texttt{comparison, string}''. 旋转操作与 KWIC
     controlflow statements      control-flow statements 48
     ...
 \end{file}
-前面几行应该阐明排序键与实际数据之间的区别.\footnote{原文为 The first few
-    lines should clarify the distinction between the sort key and the
+前面几行应该能够阐明排序键与实际数据之间的区别.\footnote{原文为 The first
+    few lines should clarify the distinction between the sort key and the
 actual data.}
 
 第二个排序命令对输入按照字母顺序排序, 同之前的一样, 选项 \texttt{-f}
