review stop 130/210 page

--- a/processing_words.tex
+++ b/processing_words.tex
@@ -1133,8 +1133,11 @@ actual data.}
 
 \begin{exercise}
     构造一个准备单词, 短语列表的工具程序, 利用该程序来自动创建索引.
-    在促成索引词与主题方面, \texttt{wordfreq} 所生成的单词频率列表
-    表现如何?
+    在促成索引字与主题方面, \texttt{wordfreq} 所生成的单词频率列表
+    表现如何?\footnote{Attack the problem of creating an index
+        automatically by building tools that prepare lists of words,
+        phrases, etc. How well does the list of word frequencies produced
+        by \texttt{wordfreq} suggest index terms or topics?}
 \end{exercise}
 
 \section{小结}
@@ -1152,7 +1155,7 @@ production use.}. 索引程序就是一个很好的例子 --- 我们使用该程
 开发而成. 废话生成器这个主意来自于 Ron Hardin. Parnas 的一篇关于
 KWIC 索引的论文 ``On the criteria to be used in decomposing systems into
 modules'' 载于 \textit{Communications of the ACM}, 1972 年 12 月.
-Jon Bentley 提供了 KWIC 索引程序的早期版本, 详细内容在 \texttt{Programming
+Jon Bentley 提供了 KWIC 索引程序的早期版本, 详细内容在 \textit{Programming
 Pearls}, \textit{Communications of the ACM}, 1985 年 6 月. 维护交叉引用
 的程序基于 Aho 与 Sethi 的工作, ``Maintaining Cross-Reference in
 Manuscripts'', CSTR 129, AT\&T Bell Laboratories, Murray Hill, NJ (1986). 
