chapter six, "Little Languages" started

--- a/awk.tex
+++ b/awk.tex
@@ -17,6 +17,7 @@
 \include{data_processing}
 \include{reports_and_databases}
 \include{processing_words}
+\include{little_languages}
 
 \backmatter
 
