review stop at 132/210 page

--- a/little_languages.tex
+++ b/little_languages.tex
@@ -8,7 +8,7 @@
 开发翻译器的原因主要有三点. 首先, 它可以帮助你了解语言处理程序的工作流程.
 本章的第一个例子是一个汇编程序, 虽然只有 20 来行, 但已经包含了汇编过程
 的核心要素, 为了执行汇编程序, 我们还要开发一个解释器程序. 汇编程序与
-解释器反映了早期阶段, 汇编语言与机器架构的关系. 其他例子还包括一个
+解释器反映了早期阶段 汇编语言与机器架构的关系. 其他例子还包括一个
 后缀计算器, awk 子集的递归下降分析器.
 
 第二个原因是在实际工作中, 为了实现一个专用的编程语言, 通常需要投入大
