--- a/little_languages.tex
+++ b/little_languages.tex
@@ -19,7 +19,37 @@
 最后一点是希望编程语言能够在实际的工作发挥作用, 就比如说本章所开发的
 计算器.
 
-语言处理程序围绕下面这个模型构造而成\footnote{TODO}:
+语言处理程序围绕下面这个模型构造而成:
+\begin{center}
+\begin{tikzpicture}
+    \draw[thick]
+        (-1.5, 0) -- (-1.5, 1.0) -- (1.5, 1.0) -- (1.5, 0) -- (-1.5, 0);
+    \draw[thick]
+        (-4.0, 3.0) -- (-4.0, 4.0) -- (-1.0, 4.0) -- (-1.0, 3.0) -- (-4.0,
+        3.0);
+    \draw[thick]
+        (4.0, 3.0) -- (4.0, 4.0) -- (1.0, 4.0) -- (1.0, 3.0) -- (4.0, 3.0);
+    
+    \draw[thick,->]
+        (-6.0, 3.5) -- (-4.0, 3.5);
+    \draw[thick,->]
+        (-1.0, 3.5) -- (1.0, 3.5);
+    \draw[thick,->]
+        (4.0, 3.5) -- (6.0, 3.5);
+    \draw[thick,<->]
+        (-2.0, 3.0) -- (-1.0, 1.0);
+    \draw[thick,<->]
+        (2.0, 3.0) -- (1.0, 1.0);
+
+    \node[above] at (-5.0, 3.5) {source};
+    \node[below] at (-5.0, 3.5) {program};
+    \node at (-2.5, 3.5) {analyzer};
+    \node at (2.5, 3.5) {synthesizer};
+    \node[above] at (5.0, 3.5) {target};
+    \node[below] at (5.0, 3.5) {program};
+    \node at (0, 0.5) {symbol table};
+\end{tikzpicture}
+\end{center}
 
 分析器系语言处理程序的前端, 它负责读取源程序并将其切分成一个个词法单元, 词法
 单元包括运算符, 操作数等. 分析器对源程序进行语法检查, 如果源程序含有语法
