为某些术语加上英文原词

--- a/little_languages.tex
+++ b/little_languages.tex
@@ -51,11 +51,14 @@
 \end{tikzpicture}
 \end{center}
 
-分析器系语言处理程序的前端, 它负责读取源程序并将其切分成一个个词法单元, 词法
+分析器 (analyzer) 系语言处理程序的前端, 它负责读取源程序 (source program)
+并将其切分成 一个个词法单元, 词法
 单元包括运算符, 操作数等. 分析器对源程序进行语法检查, 如果源程序含有语法
 错误, 它就会打印一条错误消息. 最后, 分析器把源程序转换成某种中间形式,
-并传递给后端 (合成器), 合成器再根据中间形式生成目标程序. 合成器在生成
-目标程序的过程中需要和符号表通信, 而符号表中的内容由分析器收集而来.
+并传递给后端 (合成器), 合成器 (synthesizer) 再根据中间形式生成目标程序
+(target program). 合成器在生成
+目标程序的过程中需要和符号表 (symbol table) 通信, 而符号表中的内容由分析
+器收集而来.
 虽然我们把语言的处理过程描述成多个界限分明的不同步骤, 但实际上, 这些界限
 通常很模糊, 而且有些步骤有可能被合并成一个.
 \marginpar{132}
