--- a/little_languages.tex
+++ b/little_languages.tex
@@ -225,6 +225,6 @@
 
 标号是汇编语句的第一个字段, 操作符前面有一个空格符. 第一次遍历前, 把
 \marginpar{135}
-\texttt{FS} 设置成 \verb'[ \t]+', 于是字段分隔符变成由多个空格符或制表
+\texttt{FS} 设置成 \verb'[ \t]+', 于是字段分隔符变成由多个空格符和制表
 符组成的序列. 比较特殊的是, 前导空格也被当作字段分隔符, 所以 \verb'$1'
 总是标号, 而 \verb'$2' 总是操作符.
