add a TODO for unfinished translation

--- a/little_languages.tex
+++ b/little_languages.tex
@@ -269,9 +269,8 @@
 是一张图的规范说明, 规范说明的每一行都表示一个数据点, 或坐标轴的标签
 信息. 数据点是由一对 \textit{x}-\textit{y} 表示, 如果只有一个 \textit{y},
 则 \textit{x} 是从 1 开始的递增序列, 即 1, 2, 3, ..., 
-% TODO
 An optional nonnumeric plotting character can follow either form of data
-value. 标签信息由一个关键词和多个参数值组成:
+value\footnote{TODO}. 标签信息由一个关键词和多个参数值组成:
 \begin{pattern}
 \indent\texttt{label}\ \textit{caption} \par
 \indent\texttt{range}\ \textit{xmin}\ \textit{ymin}\ \textit{xmax}\
