complete a TODO in page 137/210

--- a/little_languages.tex
+++ b/little_languages.tex
@@ -302,9 +302,36 @@ value\footnote{TODO}. 标签信息由一个关键词和多个参数值组成:
     1983 44600
     1984 46200
 \end{file}
-的输出是:\footnote{TODO}
+的输出是\footnote{输入数据是我瞎编的, 所以生成的坐标图与英文原版
+不太一致 --- 译者注}:
+{\small
 \begin{file}
+      |------------------------------------------------------------------------|
+      |                                                                        |
+      |                                                                        |
+      |                                                     **    *   *        |
+50000 -                                                    *   * *   *         |
+      |                                                   *            * *     |
+      |                                                         *       *      |
+      |                                                ***    *     *          |
+      |                                *     *     ****                        |
+      |               *                 *  *   *                               |
+      |                          **  **  *       **                            |
+30000 -         *          *       **       * * *                              |
+      |                         *                                              |
+      |                                                                        |
+      |                                                                        |
+      |    *                                                                   |
+      |                                                                        |
+      |                                                                        |
+      |                                                                        |
+10000 -                                                                        |
+      |                                                                        |
+      |---------|----------|---------|----------|---------|----------|---------|
+               1930       1940      1950       1960      1970       1980        
+                        Annual Traffic Deaths, USA, 1925-1984                   
 \end{file}
+}
 
 \texttt{graph} 的处理程序分为两个阶段. 主循环读取并解析图的规范说明, 
 使用模式辨认不同类型的语句. 图的中间表示形式存放在若干个数组与变量中,
