update plotting graph in page 136/210

--- a/little_languages.tex
+++ b/little_languages.tex
@@ -302,24 +302,25 @@ value\footnote{TODO}. 标签信息由一个关键词和多个参数值组成:
     1983 44600
     1984 46200
 \end{file}
-的输出是\footnote{输入数据是我瞎编的, 所以生成的坐标图与英文原版
-不太一致 --- 译者注}:
+的输出是\footnote{英文原版没有给出完成的统计数据, 下面这张表的统计数据来自
+    \url{https://en.wikipedia.org/wiki/List_of_motor_vehicle_deaths_in_U.S._by_year}
+ --- 译者注}:
 {\small
 \begin{file}
       |------------------------------------------------------------------------|
       |                                                                        |
+      |                                                  *  **                 |
+      |                                               * * **        **         |
+50000 -                                                *          *   *        |
+      |                                             **           *             |
+      |                                                       ***      * *     |
+      |                                            *                    *      |
+      |                                     *     *                            |
+      |                               ***  * *****                             |
+      |               *    *         *   *                                     |
+30000 -         *                ****                                          |
       |                                                                        |
-      |                                                     **    *   *        |
-50000 -                                                    *   * *   *         |
-      |                                                   *            * *     |
-      |                                                         *       *      |
-      |                                                ***    *     *          |
-      |                                *     *     ****                        |
-      |               *                 *  *   *                               |
-      |                          **  **  *       **                            |
-30000 -         *          *       **       * * *                              |
       |                         *                                              |
-      |                                                                        |
       |                                                                        |
       |    *                                                                   |
       |                                                                        |
