--- a/little_languages.tex
+++ b/little_languages.tex
@@ -365,3 +365,12 @@ value. 标签信息由一个关键词和多个参数值组成:
             array[x+i, y] = substr(s, i+1, 1)
     }
 \end{awkcode}
+
+Awk 很适合处理面向模式的 \texttt{graph} 语言, 之所以这样说是因为它的
+规范说明语句是带有值的关键词. 使用这种风格来设计语言是一个很好的
+开始: 既方便用户使用, 也方便处理.
+
+\texttt{graph} 是坐标绘图语言 \texttt{grap} 的简化版本, 而 \texttt{grap}
+是绘图语言 \texttt{pic} 的预处理器. 
+\marginpar{139} 当同时使用 \texttt{grap}, \texttt{pic} 与 \texttt{troff}
+时, 同样的数据与几乎相同的描述可以生成下面这张图片:\footnote{TODO}
