--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -1,6 +1,6 @@
 % vim: ts=4 sts=4 sw=4 et tw=75
 \chapter{报表与数据库}
-\label{reports_and_databases}
+\label{chap:reports_and_databases}
 
 \marginpar{89}
 这章展示如何使用 awk 从文件中提取信息, 并生成报表, 我们把重点放在表格数据,
