review stop at 142/210 page

--- a/little_languages.tex
+++ b/little_languages.tex
@@ -647,7 +647,7 @@ Jan Lukasiewicz 发明的). 中缀表达式
 Forth 和 Postscript) 和口袋计算器都把它作为基本表示法来使用.
 
 我们的第一个计算器只能用来计算采用逆波兰式表示法表示的数学表达式,
-所有的运算符与操作数都用格式分开. 如果某个字段是数值, 就把它入栈;
+所有的运算符与操作数都用空格分开. 如果某个字段是操作数, 就把它入栈;
 如果是运算符, 就对栈顶的操作数执行对应的运算. 每当一个输入行结束时,
 打印栈顶元素的值, 并把它弹出.
 \marginpar{143}
