complete 1/3 in page 205/210

--- a/index.tex
+++ b/index.tex
@@ -3,3 +3,97 @@
 \label{chap:index}
 
 索引中的页码指的是英文原版的页码, 与本书页边标注的页码一致.
+
+\begin{multicols}{2}
+
+\verb'&&' 与运算符 10, 31, 37, 158
+
+\verb'%=' 赋值运算符 38
+
+\verb'*=' 赋值运算符 38
+
+\verb'+=' 赋值运算符 38
+
+\verb'-=' 赋值运算符 38
+
+\verb'/=' 赋值运算符 38
+
+\verb'^=' 赋值运算符 38
+
+\verb'=' 赋值运算符 38, 44 
+
+\verb'\' 反斜杆 28, 30, 41, 43
+
+\verb'{...}' 花括号 15, 22, 47, 167, 188 
+
+\verb'#' 注释 15, 22, 188 
+
+\verb'>' 比较运算符 9 
+
+\verb'>=' 比较运算符 9 
+
+\verb'==' 比较运算符 9, 44 
+
+\verb'?:' 条件表达式 37, 68 
+
+\verb',' 延续到下一行 22, 188 
+
+\verb'--' 自减运算符 39, 70, 112
+
+\verb'^' 指数运算符 15, 36, 46 
+
+\verb'%' 格式转换 42, 189 
+
+字符集合中的 \verb'-' 29 
+
+\verb'printf' 中的 \verb'%%' 79 
+
+替换中的 \verb'&' 43, 72, 189 
+
+\verb'++' 自增运算符 39, 146, 158 
+
+\verb'|' 输入管道 62, 76
+
+\verb'~' 匹配运算符 25, 27, 31, 37, 40
+
+\verb'!~' 不匹配运算符 25, 27, 31, 37, 40 
+
+\verb'!' 非运算符 10, 31, 37 
+
+\verb'||' 或运算符 10, 31, 37 
+
+\verb'>' 输出重定向 56, 58, 188 
+
+\verb'>>' 输出重定向 56, 58, 188 
+
+\verb"' '" 单引号 2, 4-5, 65, 100 
+
+\verb'.' 正则表达式 28 
+
+\verb'$' 正则表达式 28, 119 
+
+\verb'^' 正则表达式 28, 119 
+
+\verb'()' 正则表达式 29 
+
+\verb'[...]' 正则表达式 29 
+
+\verb'[^...]' 正则表达式 29 
+
+\verb'|' 正则表达式 29, 32
+
+\verb'*' 正则表达式 30
+
+\verb'+' 正则表达式 30 
+
+\verb'?' 正则表达式 30 
+
+\verb'%' 取余运算符 36, 46 
+
+\verb'-' 标准输入 64, 116
+
+\verb'"..."' 字符串常量 7, 24, 35, 51 
+
+\verb'_' 下划线 35
+
+\end{multicols}
