--- a/preamble.tex
+++ b/preamble.tex
@@ -24,6 +24,8 @@
 \usepackage{pifont}
 % 一页结束时, 脚注编号清零
 \usepackage[perpage]{footmisc}
+% 双栏排版
+\usepackage{multicol}
 
 % 脚注编号带圈
 \renewcommand\thefootnote{\ding{\numexpr171+\value{footnote}}}
