review stop at 22

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -16,17 +16,17 @@
 ...
 \end{pattern}
 在某些语句中, 模式可以不存在; 还有些语句, 动作及其包围它的花括号也可以不存
-在. 如果你的程序经过 awk 检查后没有发现语法错误, 它就会每次读取一个输入行,
+在. 如果程序经过 awk 检查后没有发现语法错误, 它就会每次读取一个输入行,
 对读取到的每一行, 按顺序检查每一个模式. 对每一个与当前行匹配的模式, 对应
 的动作就会执行. 一个缺失的模式匹配每一个输入行, 因此每一个不带有模式的动
 作对每一个输入行都会执行. 只含有模式而没有动作的语句, 会打印每一个匹配模式
 的输入行. 大部分情况下, 在这一章出现的术语 ``输入行'' 与 ``记录'' 被当作
-一对同义词. 在 \ref{sec:input} 节, 我们都会讨论多行记录, 多行记录指的是一
-个记录包含了多个行.
+一对同义词. 在 \ref{sec:input} 节, 我们会讨论多行记录, 多行记录指的
+由多行数据组成的单个记录.
 
-这一章的第一节会详细讨论模式. 第二节通过描述表达式, 赋值语句与流程控制语句,
-展开对动作的讨论. 剩下的小节包括函数定义, 输出, 输入, 以及 awk 如何调用其
-他程序. 大部分小节都包含对主要性质的总结.
+本章的第一节详细讨论模式. 第二节通过描述表达式, 赋值语句与流程控制语句,
+展开对动作的讨论. 剩下的小节包括函数定义, 输出, 输入, 以及 awk 调用其
+他程序的方式. 大部分小节都包含对主要性质的总结.
 
 \subsection{输入文件\filename{countries}}
 \label{subsec:the_input_file_countries}
@@ -34,7 +34,7 @@
 作为本章许多 awk 程序的输入数据, 我们将使用文件 \filename{countries}. 每一
 行都包括一个国家的名字, 面积 (以千平方英里为单位), 人口 (以百万为单位), 以
 及这个国家所在的大陆. 数据来源于 1984 年, 苏联被归到了亚洲. 在文件里, 四列
-数据用制表符分隔; 用一个空白符分隔 \texttt{North} (\texttt{South}) 与
+数据用制表符分隔, 用一个空格分隔 \texttt{North} (\texttt{South}) 与
 \texttt{America}.
 
 文件 \filename{countries} 包含下面几行:
@@ -95,7 +95,8 @@
 \label{sec:patterns}
 \marginpar{23}
 
-模式控制动作的执行. 这一小节描述模式的6种类型, 以及匹配它们的条件.
+模式控制着动作的执行: 当模式匹配时, 相应的动作便会执行. 
+这一小节描述模式的6种类型, 以及匹配它们的条件.
 \begin{summary}{模式汇总}
     \begin{enumerate}
         \item \BEGIN \verb'{' \stmt \verb'}' \par
